--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "main.js",
   "dependencies": {
     "expo": "17.0.0",
+    "native-base": "^2.1.4",
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz"
   }
