--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-redux": "^5.0.5",
     "redux": "^3.7.0",
     "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "react-native-qrcode": "^0.2.3"
   }
 }
